--- a/composer.json
+++ b/composer.json
@@ -100,7 +100,7 @@
             "cache:clear": "symfony-cmd",
             "assets:install --symlink --relative tests/%PUBLIC_DIR%": "symfony-cmd",
             "security-checker security:check --end-point=http://security.sensiolabs.org/check_lock": "script",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "assets:install tests/%PUBLIC_DIR%": "symfony-cmd",
             "security-checker security:check": "script"
         }
     },
