--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
         "symfony/twig-bundle": "3.4.*",
         "symfony/validator": "3.4.*",
         "symfony/maker-bundle": "^1.1",
+        "symfony/yaml": "3.4.*",
         "tecnickcom/tcpdf": "^6.2",
         "phpoffice/phpexcel": "^1.8"
     },
@@ -73,7 +74,7 @@
         "phpmd/phpmd": "^2.6",
         "php-coveralls/php-coveralls": "^2.0",
         "se/selenium-server-standalone": "3.8.*",
-        "sebastian/phpcpd": "^2.0",
+        "sebastian/phpcpd": "^3.0",
         "sensiolabs/security-checker": "^4.0",
         "squizlabs/php_codesniffer": "^2.7",
         "symfony/browser-kit": "3.4.*",
@@ -98,11 +99,8 @@
         ],
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative tests/%PUBLIC_DIR%": "symfony-cmd",
-            "security-checker security:check --end-point=http://security.sensiolabs.org/check_lock": "script",
-            "security-checker security:check": "script",
-            "assets:install tests/%PUBLIC_DIR%": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         }
     },
     "config": {
@@ -113,10 +111,9 @@
     },
     "bin": ["check-src"],
     "extra": {
-        "symfony-app-dir": "tests/app",
-        "symfony-bin-dir": "tests/bin",
-        "symfony-web-dir": "tests/web",
-        "symfony-tests-dir": "tests",
+        "public-dir": "tests/public",
+        "conf-dir": "tests/conf",
+        "config-dir": "tests/config",
         "branch-alias": {
             "dev-master": "3.1-dev"
         }
