--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "App\\": "tests/src/",
+            "App\\": "tests/src",
             "Fi\\CoreBundle\\": "src/Fi/CoreBundle",
             "Fi\\PannelloAmministrazioneBundle\\": "src/Fi/PannelloAmministrazioneBundle"
         }
@@ -60,7 +60,7 @@
         "symfony/translation": "3.4.*",
         "symfony/twig-bundle": "3.4.*",
         "symfony/validator": "3.4.*",
-        "symfony/maker-bundle": "^1.1",
+        "symfony/maker-bundle": "1.5.*",
         "symfony/yaml": "3.4.*",
         "tecnickcom/tcpdf": "^6.2",
         "phpoffice/phpexcel": "^1.8"
