--- a/.travis.yml
+++ b/.travis.yml
@@ -112,9 +112,9 @@ script:
   - ant
 
 after_success:
-  - if [  ! $TRAVIS_PHP_VERSION=~ ^hhvm ]; then php vendor/bin/php-coveralls -v; fi
-  - if [  ! $TRAVIS_PHP_VERSION=~ ^hhvm ]; then wget https://scrutinizer-ci.com/ocular.phar -t 3; fi;
-  - if [  ! $TRAVIS_PHP_VERSION=~ ^hhvm ]; then php ocular.phar code-coverage:upload --format=php-clover build/artifacts/coverage/clover.xml; fi;
+  - if [[ ! $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then php vendor/bin/php-coveralls -v; fi
+  - if [[ ! $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then wget https://scrutinizer-ci.com/ocular.phar -t 3; fi
+  - if [[ ! $TRAVIS_PHP_VERSION =~ ^hhvm ]]; then php ocular.phar code-coverage:upload --format=php-clover build/artifacts/coverage/clover.xml; fi
   - sudo cat $TRAVIS_BUILD_DIR/build/artifacts/logs/selenium2.log
   - sudo cat $TRAVIS_BUILD_DIR/build/artifacts/logs/webserver.log
   - rm tests/var/cache/dbtest.sqlite
